MODINV-1271: code review